--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
-    "react-scroll": "^1.8.9",
-    "react-spinners": "^0.13.8"
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
